fixed toasty click through, fixed z-index wars

--- a/webapp/src/react/app/toasty/styles/toast.scss
+++ b/webapp/src/react/app/toasty/styles/toast.scss
@@ -12,6 +12,7 @@
   position: relative;
   transition: .2s;
   overflow: hidden;
+  pointer-events: none;
 
   &:hover {
     opacity: .2;
